added item ID in TODO form

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -45,6 +45,8 @@
 
     <h2>To-Do Page</h2>
     <form action="/submit_todo" method="post">
+      <label for="item_id">Item ID:</label><br />
+      <input type="text" id="item_id" name="itemId" required /><br />
       <label for="item_name">Item Name:</label><br />
       <input type="text" id="item_name" name="itemName" required /><br />
       <label for="item_desc">Item Description:</label><br />
