--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -47,6 +47,10 @@
     <form action="/submit_todo" method="post">
       <label for="item_id">Item ID:</label><br />
       <input type="text" id="item_id" name="itemId" required /><br />
+      <label for="item_uuid">Item UUID:</label><br />
+      <input type="text" id="item_uuid" name="itemUUID" required /><br />
+      <label for="item_hash">Item Hash:</label><br />
+      <input type="text" id="item_hash" name="itemHash" required /><br />
       <label for="item_name">Item Name:</label><br />
       <input type="text" id="item_name" name="itemName" required /><br />
       <label for="item_desc">Item Description:</label><br />
